- Fixed problems with Unreal using devices in a chroot'ed environment and ircd.pid problems
  with setuid/setgid, reported by thilo (#0001514).
- Made /sajoin override modes (e.g. +bilk) reported by mcskaf (#0000518).
- Fixed issue when 2 servers link with identical user@host *:lines but with different
  expire times, reason field, etc... Entries are now fully synced between servers.
  Reported by Cnils (#0001448).
- Added umode +T to help.conf
- Fixed an issue with add/del/remove in /spamfilter being case sensitive.
- Fixed invalid nameserver info when chrooted (nameserver was always localhost).
- Fixed a remote include bug involving cached files. Thanks to chatsphere.net for helping to
  track this down!
- Modified 404 numeric a bit (#0001515).
- Fixed 'no server notice on /restart or /die', reported by Lx (#0001062). This was caused
  by a bug in flush_connections(&me), hopefully there won't be any side effects.
- Fixed file owner problems when IRC_UID/IRC_GID is used (eg: when running chrooted).
- Fixed crashbug if we were unable to write a remote include file to disk.
- Limited 'All Connections in Use' message to max 1 every 15s, this DOES NOT mean we will
  introduce throttling of other msgs (or making this configurable)... this is just
  an exception because this msg is sent to _all opers_ and you cannot disable it by
  unsetting certain snomasks. Anything lower than 15s would be bad anyway since this
  is a very serious error condition. Requested by LoVeR (#0001412).
- Added can_dccdeny operflag so you can give your local/global opers access to this too.
  Co-admin, admin, sadmin and netadmin get it by default. Suggested in #0001247.
- Updated operflag docs.
- '/rehash -all' had bugs and is now considered depricated, just use '/rehash' instead.
  On '/rehash' we reload everything already so the '-all' option was useless anyway.
  Reported by fez (#0001516).
- Made blocked dcc notices (sent to umode +v) global, suggested by neothematrix (#1513).