@@ -248,7 +248,17 @@ oper bobsmith {
 	*		standard
 */
 
-listen         *:6601
+/* NOTE ON SSL PORTS: SSL ports are pretty non-standardized,
+ * besides numerous high-SSL ports, some people say you should run
+ * it at 994 because that's the official SSL port.. but that
+ * requires root! Besides, port 194 is the official irc port and
+ * have you ever seen an ircd running on that?
+ * So, our suggestion is to use port 6697 for SSL, this is used by
+ * quite some networks and is recognized by for example StunTour.
+ * You are free to open up as many SSL ports as you want, but
+ * by (also) using 6697 you help the world standardize a bit ;).
+ */
+listen         *:6697
 {
 	options
 	{
